[package]
name = "kamino"
version = "0.1.0"
edition = "2021"
description = "HTTP Server Mock Engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
actix-web = { version = "4" }
log = "0.4"
simplelog = "0.12.0"
humantime = "2.1.0"
tokio = { version = "1.19.2", features = ["time"] }